[package]
name = "memoffset"
version = "0.5.6"
authors = ["Gilad Naaman <gilad.naaman@gmail.com>"]
description = "offset_of functionality for Rust structs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Gilnaa/memoffset"
keywords = ["mem", "offset", "offset_of", "offsetof"]
categories = ["no-std"]

[build-dependencies]
autocfg = "1"

[dev-dependencies]
doc-comment = "0.3"

[dependencies]
compiler_builtins = {version = "0.1", optional = true}
core = {version = "1.0", optional = true, package = "rustc-std-workspace-core"}
alloc = {version = "1.0", optional = true, package = "rustc-std-workspace-alloc"}

[features]
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "alloc"]
default = []
unstable_const = []
unstable_raw = []
